src/objects/GPM_Project__c.object
<CustomObject>
    <fields>
        <fullName>Percent_of_Amount_Spent__c</fullName>
        <formula>IF(OR(Budgeted_Amount__c = 0, Amount_Spent_Rollup__c  = 0), 0,
Amount_Spent_Rollup__c/Budgeted_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an auto-calculated field. % Total Budget Amount Spent calculates the percentage of the total budget that has been spent to date.</inlineHelpText>
        <label>% of Total Budget Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Performance_Status_Flag__c</fullName>
        <formula>IMAGE( 
CASE( Performance_Status__c , 
&quot;Red&quot;, &quot;/resource/RedFlag&quot;, 
&quot;Yellow&quot;, &quot;/resource/YellowFlag&quot;, 
&quot;Green&quot;, &quot;/resource/GreenFlag&quot;, 
&quot;Blue&quot;, &quot;/resource/BlueFlag&quot;, 
&quot;Grey&quot;, &quot;/resource/GreyFlag&quot;,&quot;/s.gif&quot;), 
CASE( Performance_Status__c, 
&quot;Red&quot;, &quot;Red&quot;, 
&quot;Yellow&quot;, &quot;Yellow&quot;, 
&quot;Green&quot;, &quot;Green&quot;, 
&quot;Blue&quot;, &quot;Blue&quot;, 
&quot;Grey&quot;, &quot;Grey&quot;, 
&quot;Overall Project Health Flag&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Project Health Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Status__c</fullName>
        <description>Renamed the field to Overall Project Health for PC i4</description>
        <inlineHelpText>Use this field to indicate the overall performance status for this project</inlineHelpText>
        <label>Overall Project Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Grey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <inlineHelpText>Use this field to indicate the date that you anticipate the project to end.  This date should serve as a baseline and remain unchanged once entered.</inlineHelpText>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <inlineHelpText>Use this field to indicate the date that you anticipate the project to start.  This date should serve as a baseline and remain unchanged once entered.</inlineHelpText>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Portfolio_Strategic_Initiatives__c</fullName>
        <inlineHelpText>Use this field to select goals or strategic initiatives defined by your office or portfolio for this project.</inlineHelpText>
        <label>Office Goals / Initiatives</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Office_Portfolio__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>LeadingChange</fullName>
                </value>
                <value>
                    <fullName>FAS - GSA Enterprise</fullName>
                </value>
                <value>
                    <fullName>FAS - Improve PMP</fullName>
                </value>
                <value>
                    <fullName>FAS - Innovation Center</fullName>
                </value>
                <value>
                    <fullName>LeadingPeople</fullName>
                </value>
                <value>
                    <fullName>FAS - NS 2020</fullName>
                </value>
                <value>
                    <fullName>FAS - Strategic Workforce Planning</fullName>
                </value>
                <value>
                    <fullName>FAS - Sunset Programs</fullName>
                </value>
                <value>
                    <fullName>FAS - Sustainability</fullName>
                </value>
                <value>
                    <fullName>OGP - Best Practices Implemented in All</fullName>
                </value>
                <value>
                    <fullName>OGP - FBPTA Compliance in Fed Agencies</fullName>
                </value>
                <value>
                    <fullName>OGP - Useful Research/Strategies/Tools</fullName>
                </value>
                <value>
                    <fullName>Business Acumen</fullName>
                </value>
                <value>
                    <fullName>Building Coalitions</fullName>
                </value>
                <value>
                    <fullName>Results Driven</fullName>
                </value>
                <value>
                    <fullName>Results Driven from RC</fullName>
                </value>
                <value>
                    <fullName>Results Driven from RC&apos;s with Acquisition Centers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>Use this field to identify the priority for the project.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to make the Project Private or Public to All Internal Users</description>
        <inlineHelpText>Check this box and &quot;Save&quot; in order to make the entire Project private from access by others in Project Central.  If read/write access is shared with individuals or groups, this box will NOT remove those privileges automatically.</inlineHelpText>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this field to select the ultimate customer for this project.</inlineHelpText>
        <label>Project Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <inlineHelpText>Use this field to provide a description of the purpose of the project.</inlineHelpText>
        <label>Project Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this field to select the person responsible for management of the project.</inlineHelpText>
        <label>Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Project Manager)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Measures__c</fullName>
        <description>Renamed Project Measures to Project Goals and Measures for PC Phase 2</description>
        <inlineHelpText>Use this field to document information related to project measures (e.g. project benefit/value, goals/objectives, success criteria, performance measures, etc.).</inlineHelpText>
        <label>Project Goals and Measures</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Name_Auto_Generated__c</fullName>
        <description>Existing auto number value was migrated here before the Name filed value is changed to project name</description>
        <label>Project Name Auto Generated</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Outcome__c</fullName>
        <inlineHelpText>Use this field to document project outcome (e.g. qualitative performance outcome of a project or initiative).</inlineHelpText>
        <label>Project Outcomes and Business Benefits</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Application Owner</description>
        <inlineHelpText>Use this field to select the person responsible for identification and definition of the project and who has overall responsibility for the project’s business case.</inlineHelpText>
        <label>Project Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Project Sponsor)</relationshipLabel>
        <relationshipName>Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <inlineHelpText>Use this field to identify the current status of the stage. The project stage should be updated as project situations change.</inlineHelpText>
        <label>Project Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>O&amp;M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <inlineHelpText>Use this field to identify the current status of the project. The project status should be updated as project situations change.</inlineHelpText>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On-Going</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>On-Hold</fullName>
                </value>
                <value>
                    <fullName>Formative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Tier__c</fullName>
        <inlineHelpText>Project Tier is used to track projects for the Office of GSA IT.  This option is only available for the GSA IT Service / Staff Office.</inlineHelpText>
        <label>Project Tier</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_Staff_Office__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReceivedProjectSponsorApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is required before closing the phase of the project</inlineHelpText>
        <label>Received Project Sponsor Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Use this field to select the Region that this project is being managed out of.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central Office</fullName>
                </value>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>National Capital Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remaining_Budget__c</fullName>
        <formula>Budgeted_Amount__c - Amount_Spent_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an auto-calculated field. Total Remaining Budget is the difference between &quot;Total Budget Amount&quot; and &quot;Total Budget Amount Spent&quot;.</inlineHelpText>
        <label>Total Remaining Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reported_to_OMB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reported to OMB?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSO_Goals_Themes__c</fullName>
        <inlineHelpText>Use this field to select goals or strategic themes defined by your Service/Staff Office for this project.</inlineHelpText>
        <label>SSO Goals / Themes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Service_Staff_Office__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>FAS - Acquisition Excellence</fullName>
                </value>
                <value>
                    <fullName>FAS - Customer Focused Offerings</fullName>
                </value>
                <value>
                    <fullName>FAS - Environmental Sustainability</fullName>
                </value>
                <value>
                    <fullName>FAS - Workforce Excellence</fullName>
                </value>
                <value>
                    <fullName>OGP - Innovation</fullName>
                </value>
                <value>
                    <fullName>OGP - Operational Excellence</fullName>
                </value>
                <value>
                    <fullName>OGP - Customer Intimacy</fullName>
                </value>
                <value>
                    <fullName>OCIO - App Portfolio Modernization</fullName>
                </value>
                <value>
                    <fullName>OCIO - Business Capability Consulting</fullName>
                </value>
                <value>
                    <fullName>OCIO - Compliance Driven Bus. Activities</fullName>
                </value>
                <value>
                    <fullName>OCIO - Consolidate and Broaden Services</fullName>
                </value>
                <value>
                    <fullName>OCIO - Effective Bus. Line Partnership</fullName>
                </value>
                <value>
                    <fullName>OCIO - IT Service Delivery Excellence</fullName>
                </value>
                <value>
                    <fullName>OCIO - IT Service Support Excellence</fullName>
                </value>
                <value>
                    <fullName>OCIO - IT Workforce Transformation</fullName>
                </value>
                <value>
                    <fullName>OCIO - Optimized IT Portfolio</fullName>
                </value>
                <value>
                    <fullName>OCIO - Secure Access</fullName>
                </value>
                <value>
                    <fullName>OCIO - Standardized Infrastructure Env</fullName>
                </value>
                <value>
                    <fullName>OCIO - Unified Vendor Management</fullName>
                </value>
                <value>
                    <fullName>OCPO - 1800 F Milestone Met</fullName>
                </value>
                <value>
                    <fullName>OCPO - Positive Performance</fullName>
                </value>
                <value>
                    <fullName>OCPO - Learning Organization Model</fullName>
                </value>
                <value>
                    <fullName>OCPO - Employees Embrace</fullName>
                </value>
                <value>
                    <fullName>OCPO - Labor Relations</fullName>
                </value>
                <value>
                    <fullName>OCPO - CPO First for Their HR Needs</fullName>
                </value>
                <value>
                    <fullName>Viewed as experts in our roles</fullName>
                </value>
                <value>
                    <fullName>Provide superior &amp; timely comms support</fullName>
                </value>
                <value>
                    <fullName>Enhance/Strengthen Technology</fullName>
                </value>
                <value>
                    <fullName>Create streamlined, consistent processes</fullName>
                </value>
                <value>
                    <fullName>Improve internal collaboration &amp; comms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Status_Flag__c</fullName>
        <formula>IMAGE( 
CASE( Schedule_Status__c , 
&quot;Red&quot;, &quot;/resource/RedFlag&quot;, 
&quot;Yellow&quot;, &quot;/resource/YellowFlag&quot;, 
&quot;Green&quot;, &quot;/resource/GreenFlag&quot;,&quot;/s.gif&quot;), 
CASE( Schedule_Status__c, 
&quot;Red&quot;, &quot;Red&quot;, 
&quot;Yellow&quot;, &quot;Yellow&quot;, 
&quot;Green&quot;, &quot;Green&quot;,&quot;Schedule Health Flag&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Health Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Status__c</fullName>
        <description>Changed the Label for Health from Status for PC i4</description>
        <inlineHelpText>Use this field to indicate the overall schedule status for this project</inlineHelpText>
        <label>Schedule Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <color>#0B6FCE</color>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#78C953</color>
                </value>
                <value>
                    <fullName>Red</fullName>
                    <color>#E27001</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Staff_Office__c</fullName>
        <inlineHelpText>Use this field to select the Service/Staff Office that is managing the project.</inlineHelpText>
        <label>Service/Staff Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK - Office of Civil Rights</fullName>
                </value>
                <value>
                    <fullName>A - Office of the Administrator</fullName>
                </value>
                <value>
                    <fullName>B - Office of the Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>C - Office of Human Resource Management</fullName>
                </value>
                <value>
                    <fullName>D - Office of Mission Assurance</fullName>
                </value>
                <value>
                    <fullName>E - Office of Small Business Utilization</fullName>
                </value>
                <value>
                    <fullName>G - Civilian Board of Contract Appeals</fullName>
                </value>
                <value>
                    <fullName>H - Office of Administrative Services</fullName>
                </value>
                <value>
                    <fullName>I - Office of the GSA IT</fullName>
                </value>
                <value>
                    <fullName>J - Office of the Inspector General</fullName>
                </value>
                <value>
                    <fullName>L - Office of the General Counsel</fullName>
                </value>
                <value>
                    <fullName>M - Office of Governmentwide Policy</fullName>
                </value>
                <value>
                    <fullName>P - Public Buildings Service</fullName>
                </value>
                <value>
                    <fullName>Q - Federal Acquisition Service</fullName>
                </value>
                <value>
                    <fullName>S - Office of Congressional &amp; Intergovernmental Affairs</fullName>
                </value>
                <value>
                    <fullName>T - Technology Transformation Service</fullName>
                </value>
                <value>
                    <fullName>USDA – Office of the Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>Z - Office of Communications and Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <inlineHelpText>General Size / Effort Guidance: 
Small 
-Time: &lt; 3 months 
-Cost: &lt; $250k 
-Team Size: 1-3 FTEs 
Medium 
-Time: 3-6 months 
-Cost: $250k - $750k 
-Team Size: 4-10 FTEs 
Large 
-Time: &gt; 6 months 
-Cost: &gt; $750k 
-Team Size: &gt; 10 FTEs</inlineHelpText>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusUpdateOrComments__c</fullName>
        <inlineHelpText>The &quot;Latest Project Updates&quot; section read-only
 and only allow users to update those fields from the &quot;New Pulse&quot; quick action button or &apos;New Pulse&quot; from related list.</inlineHelpText>
        <label>Status Update/Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <inlineHelpText>Use this field to add a description or details in regards to Schedule, Cost, and Performance Status (e.g. Project highlights, Upcoming Milestones and Events, Critical Items for Leadership Action, etc.).</inlineHelpText>
        <label>Status Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Use this field to identify the current phase of the project. The project phase should be updated as the project progresses through the project life cycle.</inlineHelpText>
        <label>Project Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Concept Approval</fullName>
                </value>
                <value>
                    <fullName>Initiating</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Executing</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Construction Procurement</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Close-Out</fullName>
                </value>
                <value>
                    <fullName>Close-Out/Closed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Troux_ID_Application_ID__c</fullName>
        <label>Troux ID/Application ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpcomingActionItems__c</fullName>
        <description>Upcoming Project Action Items</description>
        <inlineHelpText>The &quot;Latest Project Updates&quot; section read-only
 and only allow users to update those fields from the &quot;New Pulse&quot; quick action button or &apos;New Pulse&quot; from related list.</inlineHelpText>
        <label>Upcoming Action Items</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All_Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Master_Project__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Active Projects</label>
    </listViews>
    <listViews>
        <fullName>All_Corporate_IT_Services_Projects</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Key_Project__c</columns>
        <columns>Master_Project__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>GPM_Project__c.P360_CorporateITServices</value>
        </filters>
        <label>All Corporate IT Services Projects</label>
    </listViews>
    <listViews>
        <fullName>All_Simple_Projects</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Master_Project__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>GPM_Project__c.P360_SimpleProject</value>
        </filters>
        <label>All Simple Projects</label>
    </listViews>
    <listViews>
        <fullName>All_Sprint_Projects2</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Master_Project__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>GPM_Project__c.P360_Sprint</value>
        </filters>
        <label>All Sprint Projects</label>
    </listViews>
    <listViews>
        <fullName>All_Standard_Projects</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Master_Project__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>GPM_Project__c.Project_Central</value>
        </filters>
        <label>All Standard Projects</label>
    </listViews>
    <listViews>
        <fullName>BOM</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>BOM Apps</label>
    </listViews>
    <listViews>
        <fullName>CBCA_Projects</fullName>
        <columns>NAME</columns>
        <columns>Service_Staff_Office__c</columns>
        <columns>Performance_Status__c</columns>
        <columns>Performance_Status_Flag__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Staff_Office__c</field>
            <operation>equals</operation>
            <value>G - Civilan Board of Contract Appeals</value>
        </filters>
        <label>CBCA Projects</label>
    </listViews>
    <listViews>
        <fullName>EVS_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Executive_Sponsor__c</columns>
        <columns>Office_Portfolio__c</columns>
        <columns>Project_Stage__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Sponsor__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Region__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>Actual_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>EVS</value>
        </filters>
        <label>EVS Projects</label>
    </listViews>
    <listViews>
        <fullName>FAS_Projects</fullName>
        <columns>NAME</columns>
        <columns>Service_Staff_Office__c</columns>
        <columns>Performance_Status__c</columns>
        <columns>Performance_Status_Flag__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Planned_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Staff_Office__c</field>
            <operation>equals</operation>
            <value>Q - Federal Acquisition Service</value>
        </filters>
        <label>FAS Projects</label>
    </listViews>
    <listViews>
        <fullName>Great_Ideas_Hunt</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Service_Staff_Office__c</columns>
        <columns>Performance_Status__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Sponsor__c</columns>
        <columns>Actual_Start_Date__c</columns>
        <columns>Planned_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>GIH</value>
        </filters>
        <label>Great Ideas Hunt</label>
    </listViews>
    <listViews>
        <fullName>ICPA_Projects</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <columns>NAME</columns>
        <columns>Master_Project__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Master_Project__c</field>
            <operation>equals</operation>
            <value>FY18 ICPA Projects</value>
        </filters>
        <filters>
            <field>Master_Project__c</field>
            <operation>equals</operation>
            <value>FY18 ICPA Team Initiatives</value>
        </filters>
        <label>ICPA Projects</label>
    </listViews>
    <listViews>
        <fullName>ICPW_Projects</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Master_Project__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>FY18 ICPW Projects</value>
        </filters>
        <filters>
            <field>Master_Project__c</field>
            <operation>equals</operation>
            <value>FY18 ICPW Projects</value>
        </filters>
        <label>ICPW Projects</label>
    </listViews>
</CustomObject>